--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,13 @@
-HELP.md
+.settings/
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
 bin/
+.classpath
+.project
 .DS_Store
+.idea
 *.iml
+pom.xml
 src/main/java/com/fitanywhere/Application.java
-src/main/java/com/fitanywhere/IndexController_inSpringBoot.java
+src/main/java/com/fitanywhere/IndexController.java
 src/main/java/com/fitanywhere/ServletInitializer.java
 src/main/resources/application.properties
-
