--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,24 @@ spring.thymeleaf.cache=false
 
 ###:for log
 # logging.level.org.springframework.web=INFO
+
+# ===============
+# Spring Boot Email設定 (Eugen)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fitanywhere2024@gmail.com
+spring.mail.password=csbwjrnvktcyuqms
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+# ===============
+# Redis設定 (Eugen)
+# Redis配置
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=2
+# ===============
+# 時區強制CST Taipei 禁止預設的轉UTC (Eugen)
+spring.jackson.time-zone=Asia/Taipei
