--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,7 +53,7 @@ spring.thymeleaf.cache=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fitanywhere2024@gmail.com
-spring.mail.password=csbwjrnvktcyuqms
+spring.mail.password=請Trello取得
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # ===============
