--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,12 +53,14 @@ spring.thymeleaf.cache=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fitanywhere2024@gmail.com
-spring.mail.password=請Trello取得
+
+# 請不要把password上github 請Trello取得
+spring.mail.password=
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # ===============
 # Redis設定 (Eugen)
-# Redis配置
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database=0
