--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ spring.mail.port=587
 spring.mail.username=fitanywhere2024@gmail.com
 
 # 請不要把password上github 請Trello取得
-spring.mail.password=
+spring.mail.password=csbwjrnvktcyuqms
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
