--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,3 +73,6 @@ spring.jackson.time-zone=Asia/Taipei
 # ===============
 # To turn on session function in the implemted Tomcat. (Eugen)
 server.servlet.session.timeout=7200s
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
