--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ welcome.message: \u4E16\u754C\u4F60\u597D
 # spring.messages.basename=messages, messages2
 
 ###:for DB - datasource - MySQL
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/fitanywhere?serverTimezone=Asia/Taipei
 spring.datasource.username=root
 spring.datasource.password=123456
