Inconsistent merge state: could not find file MERGE_MSG in .git folder. This file contains the commit message for a merge commit.

--- a/pom.xml
+++ b/pom.xml
@@ -284,15 +284,15 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>
-				0205_Maven_SpringBootMVC_Thymeleaf_Ver5_SpringData-Jpa
-			</groupId>
-			<artifactId>
-				0205_Maven_SpringBootMVC_Thymeleaf_Ver5_SpringData-Jpa
-			</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>-->
+<!--				0205_Maven_SpringBootMVC_Thymeleaf_Ver5_SpringData-Jpa-->
+<!--			</groupId>-->
+<!--			<artifactId>-->
+<!--				0205_Maven_SpringBootMVC_Thymeleaf_Ver5_SpringData-Jpa-->
+<!--			</artifactId>-->
+<!--			<version>0.0.1-SNAPSHOT</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
